[gd_scene load_steps=4 format=3 uid="uid://c0h0877u51ues"]

[ext_resource type="PackedScene" uid="uid://4bko5vb76hbq" path="res://scenes/player.tscn" id="1_lggr6"]
[ext_resource type="Script" path="res://scripts/Control.gd" id="2_8tfna"]
[ext_resource type="Texture2D" uid="uid://dubw6jv8l5inq" path="res://assets/icon.svg" id="3_m44fv"]

[node name="World" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_lggr6")]
position = Vector2(487, 274)

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="Control" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 0
offset_left = -487.0
offset_top = -274.0
offset_right = -447.0
offset_bottom = -234.0
script = ExtResource("2_8tfna")

[node name="adicionarVida" type="Button" parent="Player/Control"]
layout_mode = 0
offset_left = -30.0
offset_top = 86.0
offset_right = 87.0
offset_bottom = 201.0
text = "Aumentar Vida"

[node name="diminuirVida" type="Button" parent="Player/Control"]
layout_mode = 0
offset_left = -29.0
offset_top = 219.0
offset_right = 98.0
offset_bottom = 333.0
text = "Diminuir vida"

[node name="Salvar" type="Button" parent="Player/Control"]
layout_mode = 0
offset_left = 285.0
offset_top = 445.0
offset_right = 412.0
offset_bottom = 559.0
text = "Salvar"

[node name="Carregar" type="Button" parent="Player/Control"]
layout_mode = 0
offset_left = 530.0
offset_top = 439.0
offset_right = 657.0
offset_bottom = 553.0
text = "Carregar"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(691, 271.5)
scale = Vector2(21.4375, 14.1641)
texture = ExtResource("3_m44fv")

[connection signal="mudar_vida" from="Player/Control" to="Player" method="_on_control_mudar_vida"]
[connection signal="salvar" from="Player/Control" to="Player" method="_on_control_salvar"]
[connection signal="pressed" from="Player/Control/adicionarVida" to="Player/Control" method="_on_adicionar_vida_pressed"]
[connection signal="pressed" from="Player/Control/diminuirVida" to="Player/Control" method="_on_diminuir_vida_pressed"]
[connection signal="pressed" from="Player/Control/Salvar" to="Player/Control" method="_on_salvar_pressed"]
[connection signal="pressed" from="Player/Control/Carregar" to="Player" method="_on_carregar_pressed"]
